[package]
name = "wechat-dump-windows"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Dump "
categories = ["rust-patterns"]
homepage = "https://github.com/oovm/RustTemplate"
repository = "https://github.com/oovm/RustTemplate"
documentation = "https://docs.rs/sub_projects"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
indexmap = { version = "2.3.0", features = ["serde"] }
proc_mem = "0.1.6"
rand = "0.9.0-alpha.2"
hmac = "0.13.0-pre.4"
sha1 = "0.11.0-pre.4"
pbkdf2 = "0.13.0-pre.1"
aes = "0.8.4"
cbc = { version = "0.1.2", features = ["block-padding", "alloc"] }
hex = "0.4.3"
anyhow = "1.0.86"

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
