[package]
name = "wechat-windows-hooks"
publish = false
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
categories = ["rust-patterns"]
homepage = "https://github.com/oovm/RustTemplate"
repository = "https://github.com/oovm/RustTemplate"
documentation = "https://docs.rs/sub_projects"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
tokio = { version = "1.39.2", features = ["full"] }
hex = "0.4.3"
windows = { version = "0.58.0", features = [
    "System_Diagnostics", "Win32_System_Threading", "Foundation_Collections",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_ProcessStatus",
    "Win32_System_Kernel",
    "Wdk_System",
    "Wdk_System_Threading"
] }

[dependencies.wechat-link]
version = "*"
path = "../wechat-link"

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
