[package]
name = "wechat-link"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
categories = ["rust-patterns"]
homepage = "https://github.com/oovm/RustTemplate"
repository = "https://github.com/oovm/RustTemplate"
documentation = "https://docs.rs/sub_projects"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
reqwest = { version = "0.12.5", features = [] }
qr2term = "0.3.1"
tokio = "1.39.2"
serde = { version = "1.0.204", features = ["derive"] }
serde-xml-rs2 = "0.3.0"

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
